:fire: new: installed firebase
- added firebase
- split out services

--- a/app.json
+++ b/app.json
@@ -12,6 +12,11 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.carrotsoftware.markit"
     },
+    "splash": {
+      "backgroundColor": "#ffffff",
+      "resizeMode": "contain",
+      "image": "./assets/images/icon.png"
+    },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
@@ -39,7 +44,9 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "@react-native-firebase/app",
+      "@react-native-firebase/auth"
     ],
     "experiments": {
       "typedRoutes": true,
