rollback from firebase install

--- a/app.json
+++ b/app.json
@@ -12,11 +12,6 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.carrotsoftware.markit"
     },
-    "splash": {
-      "backgroundColor": "#ffffff",
-      "resizeMode": "contain",
-      "image": "./assets/images/icon.png"
-    },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
@@ -25,7 +20,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.carrotsoftware.markit"
     },
     "web": {
       "output": "static",
@@ -44,9 +40,7 @@
             "backgroundColor": "#000000"
           }
         }
-      ],
-      "@react-native-firebase/app",
-      "@react-native-firebase/auth"
+      ]
     ],
     "experiments": {
       "typedRoutes": true,
