feat: crashalytics installed
- development debug added to firebase.json

--- a/app.json
+++ b/app.json
@@ -32,12 +32,13 @@
     "plugins": [
       "@react-native-firebase/app",
       "@react-native-firebase/auth",
+      "@react-native-firebase/crashlytics",
       [
         "expo-build-properties",
         {
           "ios": {
             "useFrameworks": "static",
-            "forceStaticLinking": ["RNFBApp", "RNFBAuth"]
+            "forceStaticLinking": ["RNFBApp", "RNFBAuth", "RNFBCrashlytics"]
           }
         }
       ],
