--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,7 @@
 {
+  "react-native": {
+    "crashlytics_debug_enabled": true
+  },
   "firestore": {
     "database": "(default)",
     "location": "nam5",
