--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-native-firebase/app": "^23.8.6",
     "@react-native-firebase/auth": "^23.8.6",
     "@react-native-firebase/crashlytics": "^23.8.6",
+    "@react-native-firebase/firestore": "^23.8.6",
+    "@react-native-firebase/functions": "^23.8.6",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
