--- a/firebase.json
+++ b/firebase.json
@@ -58,5 +58,9 @@
         "supportEmail": "support@undefined.firebaseapp.com"
       }
     }
+  },
+  "hosting": {
+    "public": "dist",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
