feat: implement comprehensive theming system
- Add centralized theme configuration with Safety Orange brand colors
- Create reusable UI components (Button, Card, ThemedText, ThemedView)
- Implement ThemeProvider context for app-wide theme access
- Update all screens (login, register, dashboard) to use themed components
- Add TypeScript path aliases for @components/ui
- Integrate Space Grotesk typography system
- Temporarily disable Firebase Auth for Expo Go development

This creates a solid foundation for consistent design system usage
throughout the markit construction management app.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@/*": ["./*"],
       "@components/*": ["./src/components/*"],
+      "@components/ui": ["./src/components/ui"],
       "@services/*": ["./src/services/*"],
       "@types": ["./src/types"],
       "@types/*": ["./src/types/*"]
