--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "sonner-native": "^0.23.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
