feat: google login
- surpressing warning in _layout
- filled in google.login
- installed "@react-native-google-signin/google-signin": "^16.1.1",

--- a/app.json
+++ b/app.json
@@ -30,6 +30,7 @@
       "favicon": "./assets/icons/favicon.png"
     },
     "plugins": [
+      ["@react-native-google-signin/google-signin"],
       "@react-native-firebase/app",
       "@react-native-firebase/auth",
       "@react-native-firebase/crashlytics",
@@ -53,7 +54,8 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "@react-native-google-signin/google-signin"
     ],
     "experiments": {
       "typedRoutes": true,
