--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/firestore": "^23.8.6",
     "@react-native-firebase/functions": "^23.8.6",
     "@react-native-firebase/storage": "^23.8.6",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/drawer": "^7.8.1",
     "@react-navigation/elements": "^2.6.3",
