Fix: ignore .firebase, update _layout.tsx and firebase.json for hosting and fonts

--- a/firebase.json
+++ b/firebase.json
@@ -66,6 +66,13 @@
   },
   "hosting": {
     "public": "dist",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+    "cleanUrls": true,
+    "ignore": ["firebase.json", "**/.*"],
+    "rewrites": [
+      {
+        "source": "/",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
